# svelte-store-wasm

./: Cargo.toml  README.md  rustfmt.toml
src/: bindings.rs  lib.rs
